Fix overflow

--- a/_sass/components/html.sass
+++ b/_sass/components/html.sass
@@ -24,7 +24,6 @@ pre
     @media only screen and (min-width: 768px)
         margin-left: 15em
         max-width: 720px
-        overflow: unset
         word-wrap: break-word
 
 table
